fix: minor issues on alignment

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -54,3 +54,10 @@
     bottom: 13%;
   }
 }
+
+@media only screen and (min-width: 812px) and (max-width: 1024px) {
+  .contact {
+    left: 10%;
+    bottom: 22%;
+  }
+}
