--- a/src/components/content/complete/complete.scss
+++ b/src/components/content/complete/complete.scss
@@ -3,7 +3,7 @@
 .complete-counter {
   position: absolute;
   top: 0;
-  right: 10rem;
+  right: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
