--- a/src/components/content/year/year.scss
+++ b/src/components/content/year/year.scss
@@ -25,7 +25,7 @@
 /* Celular */
 @media only screen and (min-width: 375px) and (max-width: 812px) {
   .year {
-    font-size: 4px;
+    font-size: 8px;
   }
 }
 
